# nvc-eigen

./: .gitignore  LICENSE  README.md  pyinstaller.py  requirements.txt  requirements_dev.txt  setup.cfg
nvceigen/: eigen.py  main.py  vector.py
nvceigen/nvceigen/: eigen.py  solver.py  units.py  util.py
