[metadata]
name = nvceigen
description = NV-center Hamiltonian library
author = Dennis Lönard
license = MIT
license_files = LICENSE
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.11

[options]
packages = nvceigen
install_requires =
python_requires = >=3.10
zip_safe = no